# Go1_Control_Robocom

./: CMakeLists.txt  README.md
config/: detectMid.yaml  stereo_camera_config.yaml
include/: DogVision.h
src/: DogMotion.cpp  DogVision.cpp  main.cpp
